[gd_scene load_steps=15 format=3 uid="uid://ff8iacrsl21f"]

[ext_resource type="Script" path="res://scenes/custom_windows/todo_window.gd" id="1_u1kdd"]
[ext_resource type="Texture2D" uid="uid://dvafefuq3bmh0" path="res://assets/icons/wancheng.png" id="2_c074y"]
[ext_resource type="Material" uid="uid://cbc67egooc2qr" path="res://scenes/custom_windows/tune_icon_color.tres" id="3_nlr43"]
[ext_resource type="Texture2D" uid="uid://di6nnkf3d6vus" path="res://assets/icons/cuowu.png" id="3_wenom"]
[ext_resource type="Script" path="res://scenes/custom_windows/handles.gd" id="4_far2n"]
[ext_resource type="Script" path="res://scenes/custom_windows/revealer.gd" id="5_tji6e"]
[ext_resource type="PackedScene" uid="uid://cvgg41oimyeus" path="res://scenes/components/draggable_component.tscn" id="5_vinbh"]
[ext_resource type="Texture2D" uid="uid://c1f8avwm3p740" path="res://assets/icons/right.svg" id="6_0kblq"]
[ext_resource type="Texture2D" uid="uid://dnbovwd2sbu8a" path="res://assets/icons/icon_circle.png" id="6_o4a5b"]
[ext_resource type="Shader" path="res://scenes/custom_windows/rotate_arrow.gdshader" id="6_vy7l5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1dx5"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1gy13"]
shader = ExtResource("6_vy7l5")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/rotation = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gu857"]
bg_color = Color(0.8, 0.8, 0.670588, 0.827451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktddn"]

[node name="TodoWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 309.0
offset_bottom = 397.0
mouse_filter = 2
script = ExtResource("1_u1kdd")
window_title = "To Do"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h1dx5")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TopBar/HBoxContainer"]
material = ExtResource("3_nlr43")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_c074y")
expand_mode = 1

[node name="WindowTitle" type="Label" parent="VBoxContainer/TopBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Simple Video Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="VSeparator" parent="VBoxContainer/TopBar/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="CloseButton" type="TextureButton" parent="VBoxContainer/TopBar/HBoxContainer"]
material = ExtResource("3_nlr43")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("3_wenom")
ignore_texture_size = true
stretch_mode = 5

[node name="Content" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackgroundPanel" type="Panel" parent="VBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ToDoList" type="VBoxContainer" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="ToDos" type="VBoxContainer" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="DoneRevealer" type="VBoxContainer" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 3
script = ExtResource("5_tji6e")

[node name="GroupTitle" type="HBoxContainer" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList/DoneRevealer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_constants/separation = 8

[node name="CheckedButton" type="TextureButton" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList/DoneRevealer/GroupTitle"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1gy13")
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("6_0kblq")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList/DoneRevealer/GroupTitle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Done
"
vertical_alignment = 1

[node name="Done" type="VBoxContainer" parent="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList/DoneRevealer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Content/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gu857")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Content/VBoxContainer/PanelContainer/HBoxContainer"]
material = ExtResource("3_nlr43")
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
texture = ExtResource("6_o4a5b")
expand_mode = 1

[node name="TodoTextEdit" type="LineEdit" parent="VBoxContainer/Content/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BasicLineEdit"
placeholder_text = "添加任务"
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="StatusBar" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ktddn")

[node name="Label" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 8
text = "Version 0.0.1"

[node name="Handles" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_far2n")

[node name="Bottom" type="Control" parent="Handles"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9

[node name="Right" type="Control" parent="Handles"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="Corner" type="Control" parent="Handles"]
custom_minimum_size = Vector2(9, 9)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[node name="DraggableComponent" parent="." instance=ExtResource("5_vinbh")]

[connection signal="pressed" from="VBoxContainer/TopBar/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList/DoneRevealer/GroupTitle/CheckedButton" to="VBoxContainer/Content/VBoxContainer/ScrollContainer/ToDoList/DoneRevealer" method="_on_checked_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/Content/VBoxContainer/PanelContainer/HBoxContainer/TodoTextEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="gui_input" from="Handles/Bottom" to="Handles" method="_on_bottom_gui_input"]
[connection signal="gui_input" from="Handles/Right" to="Handles" method="_on_right_gui_input"]
[connection signal="gui_input" from="Handles/Corner" to="Handles" method="_on_corner_gui_input"]
